<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">xpCarOOBE</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authorization_cancel">暂不开启</string>
    <string name="authorization_ok">确认开启</string>
    <string name="authorized_content">使用语音助手需要收集您的车内语音数据并上传至云端处理，以实现语音交互功能，请您确认是否允许收集。</string>
    <string name="authorized_content_os5">使用语音功能需要将您的语音数据上传至云端处理，请确认语音服务数据授权的具体周期。</string>
    <string name="authorized_no">不允许</string>
    <string name="authorized_ok">允许</string>
    <string name="authorized_once">本次行程允许</string>
    <string name="authorized_start_tts">请允许使用语音服务</string>
    <string name="authorized_title">使用语音服务</string>
    <string name="authorized_yes">一年内始终允许</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="connection_tips_error">网络异常，正在重连中</string>
    <string name="connection_tips_failed">网络不好,我们先跳过吧</string>
    <string name="connection_tips_ok">连接成功，让我们继续吧</string>
    <string name="connection_tips_skip">连接失败，我们先跳过吧</string>
    <string name="dialog_authorization_title">智能语音服务授权</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_btn_open">打开</string>
    <string name="dialog_camera_content">若授予智能语音使用车内摄像头数据权限，可为用户提供融合视觉的多模语音交互，是否允许使用？\n\n 该功能将通过车内摄像头实时检测驾驶员头部朝向信息，当主驾转头看向中控屏时，屏幕内容支持可见即可说，无需唤醒。</string>
    <string name="dialog_camera_title">智能语音使用车内摄像头权限</string>
    <string name="dialog_content">使用语音服务需要打开车内麦克风</string>
    <string name="dialog_full_time_content_1">功能开启后小P将全程处于待命状态。全车用户无需唤醒，可直接对小P下达语音指令。</string>
    <string name="dialog_full_time_content_2">为识别您的有效指令，小P待命时会持续收音，该部分语音数据均在车端实时处理。</string>
    <string name="dialog_full_time_title">智能免唤醒开启说明</string>
    <string name="dialog_title">打开车内麦克风</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="init_text2">是你的智能出行伙伴</string>
    <string name="init_text_1">Hi，我叫小P</string>
    <string name="init_text_3">正在初始化</string>
    <string name="init_text_sub_1"> </string>
    <string name="init_text_sub_2"> </string>
    <string name="init_text_success">  初始化成功</string>
    <string name="item_view_role_description">Tab</string>
    <string name="lan_change_toast">切换语言后，系统会自动重启</string>
    <string name="learn_and_continue">阅读并继续</string>
    <string name="log_already_upload">日志已经上传</string>
    <string name="login_already_speech">账号已登录，开始个性化设置吧</string>
    <string name="login_failed">二维码登录失败，请重试</string>
    <string name="login_help">手机扫码下载并登录小鹏汽车App</string>
    <string name="login_load_failed">加载失败，请刷新二维码</string>
    <string name="login_overdue">二维码已过期</string>
    <string name="login_refresh">请刷新二维码</string>
    <string name="login_refresh_click">点击刷新</string>
    <string name="login_refresh_failed">二维码加载失败</string>
    <string name="login_success_speech">开始个性化设置，让小批更懂你</string>
    <string name="login_success_tips">开始个性化设置，让小P更懂你</string>
    <string name="login_tips_2">你好！%s</string>
    <string name="login_title">请扫码登录</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="protocal_with">和</string>
    <string name="skip">跳过</string>
    <string name="statement_read_and_agreed">已阅读并同意</string>
    <string name="statement_title">欢迎使用小鹏汽车</string>
    <string name="system_welcome_tips">小鹏汽车致力于为您提供更为智能化的服务。部分功能及服务（例如智能辅助驾驶、智能语音、车载应用等）需遵循特定的使用条件及限制，您可以通过用户手册、用户协议、各类功能介绍及提示等途径了解相应功能的使用要求及限制，请您务必确保熟悉相关功能及其使用要求后再进行操作，时刻保持警惕，确保用车安全。\n\n车辆使用过程中，我们会收集处理相关数据，例如：\n基于履行对新能源汽车的安全管理义务，我们会收集处理车辆数据，包括但不限于车速、里程、挡位、刹车、车辆位置、电机、电池、报警数据等。\n某些功能或服务场景下，基于履行服务合同需要或征得您的同意，我们会收集处理您使用过程中提供或产生的相关数据，包括但不限于：智能语音助手需要收集处理语音数据；智能辅助驾驶需要处理车外数据；疲劳检测需要实时分析驾驶员的分神状态；会员服务需要账号信息；APP远程控制车辆需要同步车辆状态数据等。\n\n我们会严格按照法律法规要求，采取合理的安全保护措施，以保障数据安全。您可以随时通过小鹏汽车官网或车载大屏展示的隐私政策详细了解我们是如何收集、处理与保护您的信息，以及您如何行使相关权利。\n\n若您通过车载系统下载、使用第三方应用或服务，第三方可能会收集处理相关信息及数据，此时遵循第三方的服务协议或隐私政策。\n\n如您用车过程中有任何疑问，请致电客服热线：400-819-3388或020-37520800</string>
    <string name="voice_authorization_check">同意参加语音用户体验改进计划，详情可查阅</string>
    <string name="voice_disclaimer_description">关于智能语音服务的个人信息保护与处理规则，可查询</string>
    <string name="vui_authorization_content">全场景语音开启后，您可使用连续对话、可见即可说、语义打断、双音区锁定等功能。</string>
    <string name="vui_authorization_content_os5">推荐您开启全新的智能免唤醒服务，开启后可获得全场景语音的最佳语音交互体验</string>
    <string name="vui_authorization_description">关于全场景语音的个人信息保护与处理规则，可查阅</string>
    <string name="vui_authorization_explain_os5">·全车用户无需唤醒，可直接对小P下达语音指令\n·中控屏上的内容，主驾无需唤醒就能可见即可说\n·无网也能和小P对话\n·毫秒级对话响应</string>
    <string name="vui_authorization_title">激活全场景语音</string>
    <string name="vui_privacy_content">详情可查阅</string>
    <string name="xpilot_agree_btn">同意</string>
    <string name="xpilot_content">参与辅助驾驶体验改善计划，系统将会获取您使用辅助驾驶时的相关数据并上传到云端，以便未来给您提供更好的辅助驾驶服务，详情查阅《辅助驾驶用户体验改善计划》</string>
    <string name="xpilot_title">辅助驾驶用户体验改善计划</string>
</resources>