<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="start" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="320dp" android:paddingEnd="320dp">
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/center_text_size" android:textColor="@color/white" android:id="@+id/vui_authorized_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="235dp" android:text="@string/vui_authorization_title"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_02_size" android:textColor="@color/white_60" android:id="@+id/vui_authorized_content_os5" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/vui_authorization_content_os5" android:layout_below="@+id/vui_authorized_title"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_02_size" android:textColor="@color/white_60" android:id="@+id/vui_authorized_explain_os5" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="72dp" android:text="@string/vui_authorization_explain_os5" android:layout_below="@+id/vui_authorized_content_os5" android:lineSpacingExtra="24dp"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/voice_protocol" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="428dp" android:layout_below="@+id/vui_authorized_explain_os5">
        <com.xiaopeng.xui.widget.XCheckBox android:textColor="@color/white_60" android:id="@+id/user_read_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/voice_authorization_check"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/authorized_text_size" android:textColor="@color/qrcode_privacy_policy_btn_color" android:id="@+id/voice_protocol_btn" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/vui_authorized_ok" android:layout_marginTop="48dp" android:text="@string/authorization_ok" android:layout_below="@+id/voice_protocol" style="@style/XButton.V5.Real.Large.Primary"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/vui_authorized_skip" android:text="@string/authorization_cancel" android:layout_alignBottom="@+id/vui_authorized_ok" android:layout_marginStart="48dp" android:layout_toEndOf="@+id/vui_authorized_ok" style="@style/XButton.V5.Real.Large.Secoundary"/>
</com.xiaopeng.xui.widget.XRelativeLayout>
