<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/statement_title_size" android:textColor="@color/white" android:id="@+id/xpilot_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/statement_title_left" android:layout_marginTop="@dimen/statement_title_top" android:text="@string/xpilot_title"/>
    <TextView android:textSize="24sp" android:textColor="@color/white_10" android:id="@+id/xpilot_content" android:layout_width="758dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/statement_title_left" android:layout_marginTop="40dp" android:text="@string/xpilot_content" android:layout_below="@+id/xpilot_title"/>
    <View android:id="@+id/bottom" android:layout_width="match_parent" android:layout_height="@dimen/statement_bottom_view_height" android:layout_alignParentBottom="true"/>
    <Button android:id="@+id/xpilot_agree_btn" android:layout_width="@dimen/voice_bottom_button_width" android:layout_height="@dimen/voice_bottom_button_height" android:layout_marginLeft="@dimen/statement_bottom_button_view_left" android:text="@string/xpilot_agree_btn" android:layout_above="@+id/bottom" style="@style/XButton.Real.Mid.Positive"/>
    <Button android:id="@+id/xpilot_skip_btn" android:layout_width="@dimen/voice_bottom_button_width" android:layout_height="@dimen/voice_bottom_button_height" android:layout_marginLeft="860dp" android:text="@string/skip" android:layout_above="@+id/bottom" style="@style/XButton.Ghost.Large.Positive"/>
</com.xiaopeng.xui.widget.XRelativeLayout>
