<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_02_size" android:textColor="@color/x_color_text_2" android:id="@+id/tv_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/authorized_content_os5"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_02_size" android:textColor="@color/x_color_text_2" android:id="@+id/tv_privacy_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/vui_privacy_content" android:layout_below="@+id/tv_content"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_02_size" android:textColor="@color/qrcode_privacy_policy_btn_color" android:id="@+id/tv_privacy_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignBottom="@+id/tv_privacy_content" android:layout_toEndOf="@+id/tv_privacy_content"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/x_font_body_01_size" android:textColor="@color/x_color_text_highlight" android:id="@+id/btn_one_year" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="48dp" android:text="@string/authorized_yes" android:layout_below="@+id/tv_privacy_content" android:layout_centerHorizontal="true" style="@style/XButton.V5.Real.Large.Primary"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/x_font_body_01_size" android:textColor="@color/x_color_text_highlight" android:id="@+id/btn_once" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/authorized_once" android:layout_below="@+id/btn_one_year" android:layout_centerHorizontal="true" style="@style/XButton.V5.Real.Large.Secoundary"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/x_font_body_01_size" android:textColor="@color/x_color_text_highlight" android:id="@+id/btn_never" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/authorized_no" android:layout_below="@+id/btn_once" android:layout_centerHorizontal="true" style="@style/XButton.V5.Real.Large.Secoundary"/>
</com.xiaopeng.xui.widget.XRelativeLayout>
