<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/center_text_size" android:textColor="@color/white_60" android:gravity="center" android:id="@+id/authorized_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/authorized_title_top" android:text="@string/authorized_title"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/authorized_text_size" android:textColor="@color/white_36" android:gravity="center" android:id="@+id/authorized_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:text="@string/authorized_content" android:layout_below="@+id/authorized_title"/>
    <View android:id="@+id/voice_service_null" android:layout_width="match_parent" android:layout_height="@dimen/authorized_btn_bottom" android:layout_alignParentBottom="true"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/authorized_once" android:layout_width="@dimen/authorized_button_width" android:layout_height="@dimen/voice_bottom_button_height" android:layout_marginTop="@dimen/authorized_btn_bottom" android:text="@string/authorized_once" android:layout_above="@+id/voice_service_null" android:layout_centerHorizontal="true" style="@style/XButton.Ghost.Large.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/authorized_yes" android:layout_width="@dimen/authorized_button_width" android:layout_height="@dimen/voice_bottom_button_height" android:layout_marginRight="55dp" android:text="@string/authorized_yes" android:layout_toLeftOf="@+id/authorized_once" android:layout_alignTop="@+id/authorized_once" android:layout_alignBottom="@+id/authorized_once" style="@style/XButton.Real.Mid.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/authorized_skip" android:layout_width="@dimen/authorized_button_width" android:layout_height="@dimen/voice_bottom_button_height" android:layout_marginLeft="55dp" android:text="@string/authorized_no" android:layout_toRightOf="@+id/authorized_once" android:layout_alignTop="@+id/authorized_once" android:layout_alignBottom="@+id/authorized_once" style="@style/XButton.Ghost.Large.Positive"/>
    <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="44dp" android:layout_below="@+id/authorized_skip" android:layout_centerHorizontal="true">
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/view_protocol_text_size" android:textColor="@color/white_36" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/voice_disclaimer_description"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/view_protocol_text_size" android:textColor="@color/qrcode_privacy_policy_btn_color" android:id="@+id/privacy_disclaimer_link" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>
</com.xiaopeng.xui.widget.XRelativeLayout>
