<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/center_text_size" android:textColor="@color/white_60" android:gravity="center" android:id="@+id/vui_authorized_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/authorized_title_top" android:text="@string/vui_authorization_title"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/authorized_text_size" android:textColor="@color/white_36" android:gravity="center" android:id="@+id/vui_authorized_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:text="@string/vui_authorization_content" android:layout_below="@+id/vui_authorized_title"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/voice_protocol" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80dp" android:layout_below="@+id/vui_authorized_content" android:layout_centerHorizontal="true">
        <com.xiaopeng.xui.widget.XCheckBox android:id="@+id/user_read_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/voice_authorization_check"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/authorized_text_size" android:textColor="@color/qrcode_privacy_policy_btn_color" android:id="@+id/voice_protocol_btn" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/vui_authorized_checkbox_text_size" android:textColor="@color/qrcode_privacy_policy_btn_color" android:id="@+id/voice_protocol_btn_footer" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="90dp" android:layout_marginTop="200dp" android:layout_below="@+id/vui_authorized_content"/>
    <View android:id="@+id/button_center" android:layout_width="66dp" android:layout_height="@dimen/voice_bottom_button_height" android:layout_marginBottom="@dimen/authorized_btn_bottom" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/vui_authorized_yes" android:layout_width="@dimen/vui_authorized_button_width" android:layout_height="@dimen/voice_bottom_button_height" android:text="@string/authorization_ok" android:layout_toLeftOf="@+id/button_center" android:layout_alignTop="@+id/button_center" android:layout_alignBottom="@+id/button_center" style="@style/XButton.Real.Mid.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/vui_authorized_skip" android:layout_width="@dimen/vui_authorized_button_width" android:layout_height="@dimen/voice_bottom_button_height" android:text="@string/authorization_cancel" android:layout_toRightOf="@+id/button_center" android:layout_alignTop="@+id/button_center" android:layout_alignBottom="@+id/button_center" style="@style/XButton.Ghost.Large.Positive"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="44dp" android:layout_below="@+id/vui_authorized_yes" android:layout_centerHorizontal="true">
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/authorized_bottom_text_size" android:textColor="@color/white_36" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vui_authorization_description"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/authorized_bottom_text_size" android:textColor="@color/qrcode_privacy_policy_btn_color" android:id="@+id/vui_speech_privacy_link" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>
</com.xiaopeng.xui.widget.XRelativeLayout>
