<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/statement_title_size" android:textColor="@color/white" android:id="@+id/statement_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/statement_title_left" android:layout_marginTop="@dimen/statement_title_top" android:text="@string/statement_title"/>
    <View android:id="@+id/bottom" android:layout_width="match_parent" android:layout_height="@dimen/statement_bottom_view_height" android:layout_alignParentBottom="true"/>
    <Button android:id="@+id/continue_btn" android:layout_width="@dimen/voice_bottom_button_width" android:layout_height="@dimen/voice_bottom_button_height" android:layout_marginLeft="@dimen/statement_bottom_button_view_left" android:text="@string/learn_and_continue" android:layout_above="@+id/bottom" style="@style/XButton.Real.Mid.Positive"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/statement_submit_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="48dp" android:layout_above="@+id/continue_btn">
        <com.xiaopeng.xui.widget.XCheckBox android:textSize="@dimen/view_protocol_text_size" android:textColor="@color/white_36" android:id="@+id/user_read_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/statement_bottom_check_view_left" android:text="@string/statement_read_and_agreed"/>
        <TextView android:textSize="@dimen/view_protocol_text_size" android:textColor="@color/qrcode_privacy_policy_btn_color" android:id="@+id/view_user_protocol_btn" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <TextView android:textSize="@dimen/view_protocol_text_size" android:textColor="@color/white_36" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/protocal_with"/>
        <TextView android:textSize="@dimen/view_protocol_text_size" android:textColor="@color/qrcode_privacy_policy_btn_color" android:id="@+id/view_privacy_protocol_btn" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>
    <com.xiaopeng.xui.widget.XScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="@dimen/statement_content_layout_left" android:layout_marginTop="@dimen/statement_content_layout_top" android:layout_marginRight="@dimen/statement_content_layout_right" android:layout_above="@+id/statement_submit_layout" android:layout_below="@+id/statement_title" android:overScrollMode="never">
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/statement_content_text_size" android:textColor="@color/white_60" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/statement_content_text_view_right" android:text="@string/system_welcome_tips"/>
    </com.xiaopeng.xui.widget.XScrollView>
</com.xiaopeng.xui.widget.XRelativeLayout>
