<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <ImageView android:id="@+id/head_portrait_view_bg" android:background="@drawable/img_pre_landing_bg" android:visibility="gone" android:layout_width="@dimen/head_portrait_bg_wh" android:layout_height="@dimen/head_portrait_bg_wh" android:layout_marginBottom="@dimen/head_portrait_bg_top" android:scaleType="center" android:layout_above="@+id/view_qrcode_text_explain" android:layout_centerHorizontal="true"/>
    <com.xiaopeng.oobe.view.CircleImageView android:id="@+id/head_portrait_view" android:visibility="gone" android:layout_width="@dimen/head_portrait_wh" android:layout_height="@dimen/head_portrait_wh" android:layout_marginTop="@dimen/head_portrait_top" android:layout_alignTop="@+id/head_portrait_view_bg" android:layout_centerHorizontal="true"/>
    <ImageView android:id="@+id/view_qrcode_bg" android:background="@drawable/img_qr_bg" android:layout_width="@dimen/qrcode_bg_wh" android:layout_height="@dimen/qrcode_bg_wh" android:layout_marginBottom="@dimen/qrcode_bg_wh_bottom" android:layout_above="@+id/view_qrcode_text_explain" android:layout_centerHorizontal="true"/>
    <com.xiaopeng.xui.widget.XLoading android:id="@+id/view_qrcode_loading" android:layout_marginTop="@dimen/qrcode_loading_top" android:layout_alignTop="@+id/view_qrcode_bg" android:layout_centerHorizontal="true" style="@style/XLoading.Large"/>
    <ImageView android:id="@+id/view_qrcode_img" android:visibility="invisible" android:layout_width="@dimen/qrcode_img_wh" android:layout_height="@dimen/qrcode_img_wh" android:layout_marginTop="@dimen/qrcode_img_margin_top" android:scaleType="center" android:layout_alignTop="@+id/view_qrcode_bg" android:layout_centerHorizontal="true" android:layout_marginStart="@dimen/qrcode_img_margin_start"/>
    <TextView android:textSize="@dimen/center_text_size" android:textColor="@color/white_60" android:id="@+id/view_qrcode_text_explain" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/qrcode_text_explain_bottom" android:text="@string/login_title" android:layout_above="@+id/view_qrcode_text_skin" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="@dimen/qrcode_text_skin_size" android:textColor="@color/white_36" android:id="@+id/view_qrcode_text_skin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_help" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="28px" android:id="@+id/view_qrcode_btn_refresh" android:visibility="gone" android:layout_width="@dimen/qrcode_btn_refresh_w" android:layout_height="@dimen/qrcode_btn_refresh_h" android:layout_marginTop="@dimen/qrcode_btn_refresh_top" android:text="@string/login_refresh_click" android:layout_alignTop="@+id/view_qrcode_bg" android:layout_centerHorizontal="true" style="@style/XButton.Ghost.Large.Positive"/>
</merge>
